[package]
name = "replace"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ignore = "0.4.18"
num_cpus = "1.13.0"
deque = "0.3.2"
regex = "1.5.4"
clap = "2.33.3"
crossbeam-utils = "0.8"
anyhow = "1.0.43"